Add previewAccount function's logic

--- a/src/main.css
+++ b/src/main.css
@@ -493,13 +493,13 @@ button {
 }
 
 #account-preview {
-  z-index: 9999;
+  z-index: 9998;
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #000000cc;
+  background-color: #000000bb;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -529,10 +529,11 @@ button {
     position: relative;
     bottom: -36px;
     width: 84px;
-    object-fit: cover;
     height: 84px;
+    object-fit: cover;
     border: 2px solid var(--border-color);
     border-radius: 18px;
+    image-rendering: auto;
   }
 }
 
@@ -568,9 +569,13 @@ button {
     margin-block: 8px;
     border: none;
     border-radius: 6px;
-    color: #ddd;
+    color: white;
     font-family: inherit;
     font-size: 14px;
+  }
+
+  .cell button:focus-visible {
+    outline: 1px solid white;
   }
 
   .cell span.about-me {
@@ -1031,6 +1036,8 @@ button {
   }
 
   .friend-card {
+    user-select: none;
+    cursor: pointer;
     height: 50px;
     margin: 6px;
     margin-top: 0;
@@ -1273,6 +1280,8 @@ button {
   }
 
   .message-card img.pfp {
+    user-select: none;
+    cursor: pointer;
     width: 40px;
     height: 40px;
     margin-left: 12px;
@@ -1295,8 +1304,14 @@ button {
   }
 
   .message-card > .right > .top .name {
+    user-select: none;
+    cursor: pointer;
     color: white;
     font-size: 15px;
+  }
+
+  .message-card > .right > .top .name:hover {
+    text-decoration: underline;
   }
 
   .message-card > .right > .top .time {
@@ -1315,7 +1330,8 @@ button {
   }
 
   .message-card img.content {
-    box-sizing: content-box;
+    cursor: pointer;
+    box-sizing: border-box;
     align-self: flex-start;
     object-fit: contain;
     max-width: 250px;
@@ -1329,7 +1345,8 @@ button {
 
   .message-card img.content:focus-visible {
     opacity: 70%;
-    border: 1px solid #bbf;
+    outline: 1px solid #80d;
+    outline-offset: 1px;
   }
 
   .message-card .three-dots {
