--- a/src/main.css
+++ b/src/main.css
@@ -2225,23 +2225,18 @@ button {
 #chat-dialog {
   position: absolute;
   top: 12px;
-  right: 12px;
-  width: 320px;
-  min-height: 160px;
+  right: 16px;
+  width: 300px;
   border: 1px solid black;
   border-radius: 6px;
   display: flex;
   flex-direction: column;
-
-  > .bottom {
-    flex-grow: 1;
-    background-color: #24252c;
-  }
 }
 
 #chat-dialog > .top {
   background-color: #121216;
-  height: 50px;
+  min-height: 50px;
+  max-height: 50px;
   padding-left: 16px;
   display: flex;
   align-items: center;
@@ -2257,10 +2252,19 @@ button {
 }
 
 #chat-dialog > .bottom {
-  display: flex;
+  flex-grow: 1;
+  background-color: #24252c;
+
+  .cards-container {
+    margin-block: 12px;
+    max-height: 225px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
 
   .empty-dialog {
-    width: 100%;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -2274,6 +2278,49 @@ button {
     width: 20px;
     height: 20px;
   }
+
+  .requests-card {
+    user-select: none;
+    padding-inline: 12px;
+    font-size: 14px;
+    line-height: 1.8;
+  }
+
+  .requests-card span.time {
+    color: #bbb;
+    font-family: monospace;
+  }
+
+  .requests-card span.display-name {
+    color: #ccf;
+  }
+
+  .requests-card span.display-name:hover {
+    cursor: pointer;
+    text-decoration: underline;
+  }
+
+  .requests-card span.display-name:focus {
+    outline: none;
+  }
+
+  .requests-card span.display-name:focus-visible {
+    outline: 1px solid #ccf;
+    outline-offset: 2px;
+  }
+
+  .requests-card button {
+    background-color: #422;
+    margin-left: 8px;
+    padding-block: 4px;
+    padding-inline: 10px;
+    border: none;
+    border-radius: 4px;
+    color: #f00;
+    font-family: inherit;
+    font-size: 12px;
+  }
+
 }
 
 @media screen and (max-width: 1024px) {
